[package]
name = "zff"
version = "3.0.0-rc.5"
authors = ["ph0llux <ph0llux@pm.me"]
edition = "2021"
rust-version = "1.67.1"
license = "MIT OR Apache-2.0"
description = "This crate is a library to interact with zff, a file format for forensic images."
readme = "./README.md"
homepage = "https://zff.dev"
repository = "https://github.com/zff-team/zff-rs"
keywords = ["forensics", "security", "acquisition", "file-format", "file"]
publish = true

[lib]
name = "zff"
path = "src/lib/mod.rs"
test = true
bench = true
doc = true
crate-type = ["lib"]

[dependencies]
aes = "0.8.3"
aes-gcm = { version = "0.10", features = [ "std" ] }
base64 = "0.22"
blake2 = "0.10.6"
blake3 = { version = "1.8.3", features = [ "traits-preview" ] }
byteorder = "1.4.3"
chacha20poly1305 = "0.10"
cbc = { version = "0.1.2", features = [ "alloc" , "std"] }
crossbeam = "0.8.2"
digest = { version = "0.10.6", features = [ "alloc" ] }
ed25519-dalek = { version = "2.2.0", features = [ "digest" ] }
hex = { version = "0.4", optional = true }
itertools = "0.14"
log = { version = "0.4.29", optional = true }
lz4_flex = "0.12.0"
ordered-float = "5.1.0"
pkcs5 = { version = "0.7.1", features = [ "pbes2", "alloc" ] }
rand = { version = "0.9.2", features = ["os_rng"] }
redb = "3.1.0"
rust-argon2 = "3.0.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = "0.10.9"
sha3 = "0.10.8"
time = { version = "0.3.47" }
typenum = "1.19.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13.3"

# platform specific dependencies
[target.'cfg(target_family = "unix")'.dependencies]
xattr = "1.6.1"
posix-acl = "1.1.0"

[features]
default = []
serde = ["dep:serde", "dep:hex", "ordered-float/serde"]
log = ["dep:log", "dep:hex"]

[dev-dependencies]
hex = "0.4.3"