[package]
name = "zff"
version = "3.0.0-rc.6"
authors = ["ph0llux <ph0llux@pm.me"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT OR Apache-2.0"
description = "This crate is a library to interact with zff, a file format for forensic images."
readme = "./README.md"
homepage = "https://zff.dev"
repository = "https://github.com/zff-team/zff-rs"
keywords = ["forensics", "security", "acquisition", "file-format", "file"]
publish = true

[lib]
name = "zff"
path = "src/lib/mod.rs"
test = true
bench = true
doc = true
crate-type = ["lib"]

[dependencies]
aes = "0.9.0"
aes-gcm = { version = "0.10", features = [ "std" ] }
base64 = "0.22"
bitflags = "2.11.1"
blake2 = "0.11.0-rc.6" #TODO: must be stable before stable release of zff-rs
blake3 = { version = "1.8.3", features = [ "traits-preview" ] }
byteorder = "1.4.3"
chacha20poly1305 = "0.10"
cbc = { version = "0.2.0", features = [ "alloc" ] }
crossbeam = "0.8.2"
digest = { version = "0.11.2", features = [ "alloc" ] }
ed25519-dalek = { version = "2.2.0", features = [ "digest" ] }
hex = { version = "0.4", optional = true }
itertools = "0.14"
log = { version = "0.4.29", optional = true }
lz4_flex = "0.13.0"
ordered-float = "5.2.0"
phollpers = { version = "0.1.0", features = ["compression"]}
pkcs5 = { version = "0.8.0", features = [ "pbes2", "alloc" ] }
rand = { version = "0.10.1", features = ["sys_rng"]}
redb = "4.1.0"
rust-argon2 = "3.0.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
sha2 = "0.11.0"
sha3 = "0.11.0"
tar = { version = "0.4.45", optional = true }
time = { version = "0.3.47" }
typenum = "1.19.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13.3"

# platform specific dependencies
[target.'cfg(target_family = "unix")'.dependencies]
xattr = "1.6.1"
posix-acl = "1.1.0"

[features]
default = []
serde = ["dep:serde", "dep:hex", "ordered-float/serde"]
log = ["dep:log", "dep:hex"]
logical_object_source_alternatives = ["los_tar"]
los_tar = ["dep:tar"]
virtual_object_sources = ["vos_tar"]
vos_tar = ["dep:tar"]

[dev-dependencies]
hex = "0.4.3"