[package]
name = "zff"
version = "0.1.0"
authors = ["ph0llux <ph0llux@pm.me"]
edition = "2018"
license = "MIT"
description = "Placeholder, for a future project."
repository = "https://github.com/ph0llux/zff"
publish = false

[lib]
name = "zff"
path = "src/lib/mod.rs"
test = true
bench = true
doc = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
zstd = "0.9.0"
pkcs5 = { version = "0.3.0", features = [ "pbes2", "alloc" ] }
aes-gcm-siv = "0.10.3"
byteorder = "1.4.3"
rand_core = { version = "0.6.3", features = [ "getrandom" ] }

#Hashing
digest = { version = "0.9.0", features = [ "alloc" ] }
blake2 = "0.9.2"
sha2 = "0.9.6"
sha3 = "0.9.1"

[dev-dependencies]
phollaits = "0.3.3"