[package]
name = "zff"
version = "0.1.0"
authors = ["ph0llux <ph0llux@pm.me"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Placeholder, for a future project."
repository = "https://github.com/ph0llux/zff"
publish = false

[lib]
name = "zff"
path = "src/lib/mod.rs"
test = true
bench = true
doc = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
byteorder = "1.4.3"
rand = "0.7.3"
base64 = "0.13.0"
#encryption
pkcs5 = { version = "0.3.0", features = [ "pbes2", "alloc" ] }
aes-gcm-siv = "0.10.3"
#compression
zstd = "0.9.0"
#Hashing
digest = { version = "0.9.0", features = [ "alloc" ] }
blake2 = "0.9.2"
sha2 = "0.9.6"
sha3 = "0.9.1"
crc32fast = "1.2.1"
#signing
ed25519-dalek = { version = "1.0.1", features = [ "rand" ] }

[dev-dependencies]
phollaits = "0.3.3"