[package]
name = "zffacquire"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "zffacquire"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
clap = "2.33"
rand_core = { version = "0.6.3", features = [ "getrandom" ] }
zff = { path = "../zff" }