[package]
name = "zffacquire"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "0.9.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "zffacquire"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
clap = "2.33"
rand = "0.7.3"
zff = { path = "../zff" }
toml = "0.5.8"
base64 = "0.13.0"
#signing
ed25519-dalek = { version = "1.0.1", features = [ "rand" ] }