[package]
name = "zffmetareader"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "zffmetareader"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
clap = "2.33"
zff = { path = "../zff" }
base64 = "0.13.0"

#serializing crates
serde = "1.0"
toml = "0.5.8"
serde_json = "1.0"
