[package]
name = "zffmetareader"
authors = ["ph0llux <ph0llux@pm.me>"]
version = "0.10.0"
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"
description = "A command line utility to read the metadata of a zff image."
homepage = "https://github.com/ph0llux/zff"
repository = "https://github.com/ph0llux/zff"
keywords = ["forensics", "security", "acquisition", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

[[bin]]
name = "zffmetareader"
path = "src/bin/main.rs"
test = true
bench = true

[dependencies]
clap = "2.33"
zff = { path = "../zff", version = "0.10" }
base64 = "0.13.0"
#serializing crates
serde = "1.0"
toml = "0.5.8"
serde_json = "1.0"
