[package]
name = "zffmount"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
fuser = "0.9.1"
libc = "0.2.102"
zff = { path = "../zff" }
nix = "0.19"
#serializing crates
serde = "1.0"
toml = "0.5.8"