[package]
name = "zffmount"
version = "0.10.0"
edition = "2021"
rust-version = "1.56.1"
license = "MIT OR Apache-2.0"
description = "A command line utility to mount a zff image using FUSE."
homepage = "https://github.com/ph0llux/zff"
repository = "https://github.com/ph0llux/zff"
keywords = ["forensics", "security", "acquisition", "file-format", "file"]
categories = ["command-line-utilities"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
ctrlc = "3.2.1"
crossbeam-channel = "0.5.1"
fuser = "0.9.1"
libc = "0.2.102"
zff = { path = "../zff", version = "0.10" }
nix = "0.23"
walkdir = "2.3.2"
#serializing crates
serde = "1.0"
toml = "0.5.8"